# nanoscript

./: .gitignore  get_db.py  main.py  nanoscript.py  processing.py  pyproject.toml  requirements.txt  website.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/Header/: Header.js
frontend/src/components/Nav/: Navigator.js
frontend/src/components/pages/: MainPage.js
instance/: database.db
nanoscript_project/: db.sqlite3  manage.py
nanoscript_project/nanoscript_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
nanoscript_project/users/: models.py  serializers.py
nanoscript_project/users/migrations/: 0001_initial.py  0002_users.py  0003_alter_user_name_alter_user_registrationdate.py
nanovenv/: pyvenv.cfg
new_nanoscript/: .gitignore  requirements.txt
new_nanoscript/backend/: db.sqlite3
new_nanoscript/backend/accounts/: models.py  serializers.py  tokenauthentication.py  views.py
new_nanoscript/backend/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
new_nanoscript/backend/backend/: settings.py  urls.py
new_nanoscript/new_nanovenv/: pyvenv.cfg
uploads/: SmithWaterman.py  standart_primers.py
website/: __init__.py  auth.py  cluster.py  models.py  tasks.py  views.py
website/static/: index.js
website/templates/: base.html  home.html  lk.html  login.html  sign_in.html  sign_up(past).html  sign_up.html
