[tool.poetry]
name = "nanoscript"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.23"
flask = "^3.0.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
celery = "^5.3.5"
paramiko = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
